# cpp_test_app

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: FaceDetector.h
src/: FaceDetector.cpp  main.cpp
tests/: test_main.cpp
